[fix] footer copy translation and spacing RM#16672

--- a/odoo/local-src/theme_fluxdocs/static/less/utils.less
+++ b/odoo/local-src/theme_fluxdocs/static/less/utils.less
@@ -6,6 +6,8 @@
 .pb05{ padding-bottom: 0.5em }
 .pb1{ padding-bottom: 1em }
 .pb2{ padding-bottom: 2em }
+.pl02{ padding-left: 0.2em }
+.pr02{ padding-right: 0.2em }
 .no-border{ border: none !important; }
 .border-top{
 	border-top: 1px solid;
